nginx_vs_caddy_vs_traefik/caddy/k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: caddy-demo-service
spec:
  selector:
    app: caddy-demo
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
