nginx_vs_caddy_vs_traefik/caddy/k8s/caddy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-real-ingress
  annotations:
    kubernetes.io/ingress.class: caddy
    caddy.ingress.kubernetes.io/disable-ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-demo-service
                port:
                  number: 80
